--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>marathon</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="./style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 
@@ -19,9 +19,16 @@
     <div class="wrapper"></div>
   </header>
   <div class="container">
-    <div class="main">main</div>
-    <div class="side"></div>
+    <div class="box"><h1>1kmあたりのかかる分、秒</h1>
+      <label><input type="text" value="0" class="boxin" id="minutes"/>分</label>
+      <label><input type="text" value="1" class="boxin" id="seconds"/>秒</label>
+      <input type="button" class="button1" value="入力内容を取得する">
+      <p>ゴールした時</p>
+      <div id="jikan"></div>
+    </div>
   </div>
-  <footer>footer</footer>
+
+  
+<script src="script.js"></script>
 </body>
 </html>
